# otter-verify

./: Anchor.toml  Cargo.toml  README.md  SECURITY.md  package-lock.json
programs/otter-verify/: Cargo.toml
programs/otter-verify/src/: lib.rs
src/: instruction.rs  lib.rs  processor.rs  state.rs
tests/: lib.rs  otter-verify.ts  utils.rs
