[package]
name = "otter_verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "otter_verify"
crate-type = ["cdylib", "lib"]


[dependencies]
solana-program = "=1.17.25"
borsh = "0.9.3"
mpl-utils = "0.1.0"

[dev-dependencies]
solana-program-test = "=1.17.25"
solana-sdk = "=1.17.25"
